<resources>
    <string name="app_name">Bumpy</string>

    <!--Onboarding page -->
    <string name="onboarding_welcome">Welcome to Bumpy App!</string>
    <string name="onboarding_details">Bumpy is used to collect data about cycling conditions and report road
        issues in a fun and easy way.</string>
    <string name="onboarding_ngo">Powered by the Croatian Cyclist Union</string>
    <string name="next">NEXT</string>

    <!--Bottom navigation names -->
    <string name="bottom_nav_title_past_trips">Past Trips</string>
    <string name="bottom_nav_title_map">Map</string>
    <string name="bottom_nav_title_achievements">Achievements</string>
    <string name="bottom_nav_title_settings">Settings</string>

    <string name="mandatory_permissions">These permissions are mandatory to get your location. You need to allow them.</string>

    <!--Map and buttons -->
    <string name="start_trip">Start Trip</string>
    <string name="end_trip">End Trip</string>
    <string name="submit">SUBMIT</string>
    <string name="grant_location">Grant location permission to start trip</string>
    <string name="content_description_current_location">Current Location</string>
    <string name="get_road_quality_not_successful">Unable to obtain road quality</string>
    <string name="get_bumpy_points_not_successful">Unable to obtain bump points</string>
    <string name="zoom_in_message">Please zoom in to display road quality</string>
    <string name="bump_intensity_one">Very little bump</string>
    <string name="bump_intensity_two">Little bump</string>
    <string name="bump_intensity_three">Moderate bump</string>
    <string name="bump_intensity_four">Large bump</string>
    <string name="bump_intensity_five">Very large bump</string>
    <string name="bump_intensity_unknown">Bump intensity unknown</string>


    <!--Trip in Progress-->
    <string name="trip_in_progress">Trip in Progress</string>
    <string name="google_api_install">You need to install Google Play Services to use the App properly</string>
    <string name="vibration_unit">%</string>
    <string name="speed">Speed (km/h)</string>
    <string name="vibration">Vibration (%)</string>
    <string name="distance">Distance (km)</string>
    <string name="duration">Duration</string>

    <!--Data retriever-->
    <string name="get_trips_not_successful">Get past trips unsuccessful!</string>
    <string name="get_trip_stats_not_successful">Get past trip statistics unsuccessful!</string>

    <!-- Trip onSyncClick -->
    <string name="dialog_upload_trip_title">Upload trip data?</string>
    <string name="dialog_upload_trip_message">Initiate the upload of collected data?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="trip_not_uploaded_wifi">Trip data not uploaded due to WiFi not available</string>
    <string name="trip_not_uploaded_network">Trip data not uploaded due to no network</string>
    <string name="trip_not_uploaded_trip">Trip data not uploaded due to trip error</string>

    <!--Past trips-->
    <string name="upload_data_description">Upload cycling data</string>
    <string name="past_trip_description_display">"Duration %1$s   Distance: %2$.2f km"</string>
    <string name="past_trip_title">Trip on %s</string>
    <string name="upload_trip_for_stats">Please upload trip to see statistics</string>
    <string name="no_data_available">Seems you haven\'t completed any trip yet\nLet\'s start cycling!</string>

    <!--Settings-->
    <string name="title_activity_settings">Settings</string>
    <string name="settings_uid_title">User Identifier</string>
    <string name="settings_upload_trip_data_title">Upload trip data</string>
    <string name="settings_uid_summary_error">Not generated, please try again later</string>

    <!-- make sure to update TripUploadType !!! -->
    <string name="settings_upload_trip_data_default">WIFI</string>
    <string-array name="settings_upload_trip_data_values">
        <item>@string/settings_upload_trip_data_default</item>
        <item>MOBILE_DATA</item>
        <item>MANUAL</item>
    </string-array>
    <string-array name="settings_upload_trip_data_entries">
        <item>Automatically using WiFi</item>
        <item>Automatically using WiFi or Mobile data</item>
        <item>Manual upload</item>
    </string-array>
    <string name="settings_keep_awake_title">Keep screen awake</string>
    <string name="settings_keep_awake_summary">While trip is in progress</string>

    <!-- preferences keys -->
    <string name="pref_uid_key">pref_uid_key</string>
    <string name="pref_upload_trip_data_key">pref_upload_trip_data_key</string>
    <string name="pref_keep_awake_key">pref_display_stat_key</string>

    <!-- notification -->
    <string name="channel_name">Background location channel</string>

    <!-- Trip statistics -->
    <string name="title_past_trip_statistics">Trip statistics</string>
    <string name="trip_stat_duration">Duration</string>
    <string name="trip_stat_km">km</string>
    <string name="trip_stat_max_speed">Max speed</string>
    <string name="trip_stat_avg_speed">Avg speed</string>
    <string name="trip_stat_min_elevation">Min elevation</string>
    <string name="trip_stat_max_elevation">Max elevation</string>
    <string name="trip_stat_avg_elevation">Avg elevation</string>
    <string name="trip_stat_avg_vibration">Avg vibration</string>
    <string name="trip_stat_max_vibration">Max vibration</string>
    <string name="trip_stat_bumps_detected">Bumps detected</string>
    <string name="trip_stat_gnss_null_message">Cannot raw route: GNSS data not obtained</string>
    <string name="trip_stat_gnss_empty_message">Cannot raw route: GNSS data has no points</string>
    <string name="trip_stat_bump_points_null_message">Cannot draw bumps: Bumps data not obtained</string>
    <string name="trip_stat_bump_points_empty_message">Cannot draw bumps: Bumps data has no points</string>
    <string name="delete">Delete</string>
    <string name="deleted_successfully">Trip deleted successfully</string>
    <string name="deleted_error">Trip could not be deleted</string>
    <string name="export">Export motion data</string>
    <string name="export_success">Trip exported successfully</string>
    <string name="export_error_write">Trip could not be written to selected folder</string>
    <string name="export_error_net">Trip data not found</string>
    <string name="trip_stats_marker_start">Start time\n%s</string>
    <string name="trip_stats_marker_end">End time\n%s</string>

    <!-- Completed Achievement  -->
    <string name="achievements_hurray">HURRAY!</string>
    <plurals name="achievement_completed">
        <item quantity="one">%d Achievement completed!</item>
        <item quantity="other">%d Achievements completed!</item>
    </plurals>
    <string name="content_description_trophy">Completed Achievement Trophy</string>

</resources>
