<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyclingAdvocacyBlack"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:weightSum="12"
    tools:context=".ui.TripInProgressActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/speed"
        android:textColor="@color/cyclingAdvocacyYellow"
        android:textSize="@dimen/text_size_mini" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="3.5"
        android:gravity="center_horizontal">

            <com.github.anastr.speedviewlib.RaySpeedometer
                android:id="@+id/gauge_view_speed"
                style="@style/GaugeViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:maxSpeed="50"
                app:unit=""/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_double"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tv_max_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circle"
                    tools:text="35"
                    android:textColor="@color/cyclingAdvocacyYellow"
                    android:padding="@dimen/margin_mini"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maximum"
                    android:textColor="@color/cyclingAdvocacyYellow"
                    android:textSize="@dimen/text_size_micro"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/distance"
                android:textColor="@color/cyclingAdvocacyYellow"
                android:textSize="@dimen/text_size_mini" />

            <TextView
                android:id="@+id/tv_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/cyclingAdvocacyYellow"
                android:textSize="@dimen/text_size_large"
                tools:text="25.12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_double"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/duration"
                android:textColor="@color/cyclingAdvocacyYellow"
                android:textSize="@dimen/text_size_mini" />

            <Chronometer
                android:id="@+id/chronometer_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/cyclingAdvocacyYellow"
                android:textSize="@dimen/text_size_large"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_gravity="center"
        android:text="@string/vibration"
        android:textColor="@color/cyclingAdvocacyYellow"
        android:textSize="@dimen/text_size_mini" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="3.5"
        android:gravity="center_horizontal">

        <com.github.anastr.speedviewlib.RaySpeedometer
            android:id="@+id/gauge_view_vibration"
            style="@style/GaugeViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:unit="%"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_double"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_max_vibration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle"
                tools:text="55"
                android:textColor="@color/cyclingAdvocacyYellow"
                android:padding="@dimen/margin_mini" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maximum"
                android:textColor="@color/cyclingAdvocacyYellow"
                android:textSize="@dimen/text_size_micro"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/margin_double"
        android:gravity="center">

        <Button
            android:id="@+id/button_trip_end"
            style="@style/StandardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_trip" />
    </LinearLayout>

</LinearLayout>